--- a/3-events/image-gallery/src/components/image-gallery/image-gallery.css
+++ b/3-events/image-gallery/src/components/image-gallery/image-gallery.css
@@ -33,6 +33,7 @@
   display: inline-block;
   position: relative;
   margin: 2em;
+  border: 1px solid lightgrey;
 }
 .image-list li > * {
   display: block;
