--- a/6-dnd/trello/src/css/style.css
+++ b/6-dnd/trello/src/css/style.css
@@ -12,7 +12,7 @@
   padding: 0;
 }
 .trello textarea {
-  resize: none;
+  /*resize: none;  */
   width: 100%;
   border: 0;
   white-space: pre-line;
