--- a/6-dnd/trello/src/css/style.css
+++ b/6-dnd/trello/src/css/style.css
@@ -1,5 +1,6 @@
 .trello {
   display: flex;
+  align-items: start;
 }
 .trello * {
   font: 14px sans-serif;
@@ -7,12 +8,15 @@
 .column {
   margin: 1em;
   width: 20%;
-  list-style-type: none;
   background: WhiteSmoke;
+  padding: 1em;
+}
+.cards {
   padding: 0;
+  list-style-type: none;
 }
 .trello textarea {
-  /*resize: none;  */
+  resize: none;  
   width: 100%;
   border: 0;
   white-space: pre-line;
@@ -27,19 +31,20 @@
   cursor: pointer;
   z-index: -1;
 }
-li {
+.cards li {
   padding: .5em;
-  margin: 1em;
+  margin: 1em 0;
+  white-space: pre-wrap;
 }
-li.add {
+.add {
   cursor: pointer;
 }
-li:not(.title, .add) {
+.cards li:not(.title, .add) {
   position: relative;
   background: white;
   cursor: grab;
 }
-li:hover .delete{
+.cards li:hover .delete {
   z-index: 1;
 }
 .dragged {
